--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,7 @@
    
+body { font-family: Arial, sans-serif; margin: 20px; }
+        #image { max-width: 100%; height: auto; }
+        .result { margin-top: 20px; }
 
 
-.manrope- normal {
-  font-family: "Manrope", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-}
-
-@import "tailwindcss"
+        @import "tailwindcss"
